syntax = "proto3";

package dstore;

import "github.com/protocolbuffers/protobuf/src/google/protobuf/any.proto";

option go_package = "github.com/brotherlogic/dstore/proto";

message ReadRequest {
  string key = 1;
  string hash = 2;
  bool no_fanout = 3;
}
 
message ReadResponse {
  google.protobuf.Any value = 1;
  string hash = 2;
  int64 timestamp = 3;
  float consensus = 4;
}

message WriteRequest {
  string key = 1;
  google.protobuf.Any value = 2;
  bool no_fanout = 3;
}

message WriteResponse {
  float consensus = 1;
  int64 timestamp = 2;
  string hash = 3;
}

message GetLatestRequest {
  string key = 1;
  string hash = 2;
}

message GetLatestResponse {
  string hash = 1;
  int64 timestamp = 2;
}

service DStoreService {
  rpc Read (ReadRequest) returns (ReadResponse) {};
  rpc Write (WriteRequest) returns (WriteResponse) {};

  rpc GetLatest(GetLatestRequest) returns (GetLatestResponse) {};
}